# zap402

./: .env.example  ARCHITECTURE.md  LICENSE  README.md  package-lock.json  package.json  vercel.json
contracts/zap402/: Cargo.toml
contracts/zap402/src/: admin.rs  credit.rs  errors.rs  events.rs  fees.rs  lib.rs  network.rs  profile.rs  storage.rs  types.rs  validation.rs  zaps.rs
contracts/zap402/src/test/: mod.rs  test_admin.rs  test_config.rs  test_credit.rs  test_deregister.rs  test_events.rs  test_init.rs  test_integration.rs  test_integration_advanced.rs  test_min_tip.rs  test_network.rs  test_pause.rs  test_profile_query.rs  test_profiles.rs  test_register.rs  test_ttl_desync.rs  test_update_profile.rs  test_validation.rs  test_versioning.rs  test_withdraw.rs  test_zaps.rs
contracts/zap402/test_snapshots/leaderboard/tests/: test_get_leaderboard_rank.1.json  test_get_leaderboard_returns_correct_limit.1.json  test_is_on_leaderboard.1.json  test_leaderboard_remove.1.json  test_leaderboard_tiebreaking.1.json  test_update_leaderboard_case_no_replace_if_not_greater.1.json
contracts/zap402/test_snapshots/network/tests/: test_get_network_limit_zero_returns_all.1.json  test_update_network_case_append.1.json  test_update_network_case_replace_lowest.1.json  test_update_network_case_update_existing.1.json
contracts/zap402/test_snapshots/test/test_admin/: test_accept_admin_full_flow.1.json  test_accept_admin_no_proposal_fails.1.json  test_accept_admin_non_pending_fails.1.json  test_batch_update_all_unregistered.1.json  test_batch_update_emits_completed_event.1.json  (+35 more)
(+475 files in other folders)
