[package]
name = "zap402-contract"
version = "0.1.0"
edition = "2021"
description = "Zap402 — creator payout layer (zaps, profiles, leaderboard) on Soroban"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
